# test-rust-fullstack

./: .gitignore  Cargo.toml  data.sqlite
api/: .env  Cargo.toml
api/src/: config.rs  env_config.rs  main.rs
api/src/routes/: auth.rs  crud.rs  mod.rs  organizations.rs  resource_routes.rs  users.rs
api/src/services/: auth.rs  database.rs  error_handler.rs  google_auth.rs  google_oauth.rs  jwt.rs  mod.rs
macros/: Cargo.toml
macros/src/: lib.rs
migration/src/: lib.rs  m20230224_195456_users.rs  m20230318_195456_organizations.rs
shared_models/: Cargo.toml
shared_models/src/: lib.rs  organization.rs  traits.rs  user.rs
ui/: Cargo.toml  index.html
ui/src/: api.rs  contexts.rs  main.rs  routes.rs
ui/src/components/: app.rs  auth.rs  crud.rs  error.rs  form.rs  form_modal.rs  home.rs  login.rs  logout.rs  main_menu.rs  messages.rs  mod.rs  navbar.rs  table.rs
ui/src/components/common/: error_toast.rs  main_menu.rs  mod.rs
ui/src/components/crud/: list.rs  list_new.rs  mod.rs  table.rs  tableNew.rs
ui/src/components/forms/: mod.rs  organization.rs  user.rs
ui/src/jsbinds/: form.rs  mod.rs  modal.rs  toast.rs
ui/src/models/: users.rs
ui/src/services/: api.rs  localstorage.rs  mod.rs
ui/src/stores/: error.rs  mod.rs  user.rs
