[package]
name = "api-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared_models = {path = "../shared_models"}
macros = {path = "../macros"}
axum = "0.6.12"
axum-macros = "0.3.7"
axum-auth = "0.4"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
sea-orm = { version = "0.11.0", features = [ "sqlx-sqlite","runtime-actix-native-tls", "macros" ] }
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
async-trait = "0.1.50"
oauth2 = "4.3.0"
uuid = "1.3.0"
jsonwebtoken = "8.2.0"
tracing-subscriber = { version = "0.3"}
tracing = { version = "0.1"}
reqwest = {version = "0.11.15", features = ["json"] }
regex = "1"