[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html




[dependencies]
shared_models = {path = "../shared_models"}
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
yewdux = "0.9.2"
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "*"
yew-bootstrap = "0.5"
web-sys = "0.3.61"
bevy_reflect = "0.10.0"
gloo-storage = "0.2.2"
gloo-console = "0.2.3"
log = "0.4.17"
stdweb = "0.4.20"

