[package]
name = "leptos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared_models = {path = "../shared_models"}
leptos = { version = "0.2", features = ["stable", "csr"] }
leptos_router = { version = "0.2", features = ["stable", "csr"] }
leptos_meta = { version = "0.2", features = ["stable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-storage = "0.2.2"
gloo-console = "0.2.3"
gloo-net = "0.2"
wasm-bindgen = "0.2"
web-sys = "0.3.61"
serde-wasm-bindgen = "0.5"
rand = "0.8.4"